--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,15 @@
 /* General CSS */
 
 * {
+    -webkit-transition: all 200ms ease-in;
+    -o-transition: all 200ms ease-in;
     transition: all 200ms ease-in;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
-    line-height: 26px;
+    font-size: 16px;
+    line-height: 24px;
     background: #ffffff;
     color: #494949;
 }
@@ -46,9 +48,28 @@ h2.title {
     margin-bottom: 20px;
 }
 
+h2.title.big {
+    font-size: 35px;
+}
+
 h2.title span {
     display: inline-block;
     position: relative;
+}
+
+h2.title.text-left span {
+    padding-bottom: 20px;
+}
+
+h2.title.bottom span:after {
+    position: absolute;
+    content: "";
+    top: auto;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 4px;
+    background: #3DA935;
 }
 
 h2.title span:after {
@@ -59,6 +80,41 @@ h2.title span:after {
     width: 4px;
     height: 100%;
     background: #3DA935;
+}
+
+h2.title.orange span:after {
+    background: #fbbd1a;
+}
+
+
+/* h2.title span:after {
+    background: #3DA935;
+} */
+
+h1.title {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+h1.title span {
+    display: inline-block;
+    position: relative;
+    padding-bottom: 20px;
+}
+
+h1.title span:after {
+    position: absolute;
+    content: "";
+    top: auto;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 4px;
+    background: #fbbd1a;
+}
+
+.text-green {
+    color: #3da935;
 }
 
 h2.title+p {
@@ -83,19 +139,38 @@ h2.title+p {
     background-color: #ffffff;
 }
 
+.btn-transparent {
+    color: #ffffff;
+    background: transparent;
+    border-color: #ffffff;
+}
 
-/* main styling */
+.btn-transparent:hover {
+    color: #3DA935;
+    background-color: #ffffff;
+    border-color: #ffffff;
+}
+
+
+/* main styling==================================== */
 
 header {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 99999;
 }
 
 header .header-inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     padding: 15px 0;
 }
@@ -110,6 +185,8 @@ header .menu-toggle {
 }
 
 .primary-menu ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style-type: none;
     padding: 0;
@@ -135,6 +212,8 @@ header .menu-toggle {
     width: 0px;
     height: 3px;
     background: #ffffff;
+    -webkit-transition: all 300ms ease-in;
+    -o-transition: all 300ms ease-in;
     transition: all 300ms ease-in;
 }
 
@@ -189,20 +268,31 @@ header .menu-toggle {
     margin-top: 10px;
     position: absolute;
     top: calc(50% - 150px);
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-color: #ffffff;
+    color: #ffffff;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
-    font-size:65px;
+    font-size: 65px;
 }
-.banner .owl-theme .owl-nav button:focus{
+
+.banner .owl-theme .owl-nav button:focus {
     outline: none;
 }
-.banner .owl-theme .owl-nav button:hover{
+
+.banner .owl-theme .owl-nav button:hover {
     background: transparent;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
     transform: scale(1.1);
 }
+
 .what-we-do {
     background-color: #f4f4f4;
 }
@@ -218,6 +308,7 @@ color: #ffffff;
     position: relative;
     top: 180px;
     z-index: 9;
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
     box-shadow: 0 0 5px rgba(0, 0, 0, .3);
 }
 
@@ -227,12 +318,16 @@ color: #ffffff;
     position: absolute;
     top: 50%;
     left: -38px;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     padding: 0;
     cursor: pointer;
 }
 
 .what-we-do-content .btn-play:hover img {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
     transform: scale(1.1);
 }
 
@@ -387,7 +482,8 @@ color: #ffffff;
     background: #ffffff;
     padding: 40px 25px 0 25px;
     border-radius: 5px;
-    box-shadow:0 0 5px rgba(0,0,0,.1);
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .1);
 }
 
 .how-does-it-works .bottom {
@@ -440,6 +536,7 @@ color: #ffffff;
 .how-does-it-works .work-process {
     background-color: #ffffff;
     padding: 50px 20px;
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
     box-shadow: 0 0 5px rgba(0, 0, 0, .3);
     border-radius: 15px;
     position: relative;
@@ -462,10 +559,14 @@ color: #ffffff;
 }
 
 .our-partners .title-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-bottom: 20px;
     max-width: 1000px;
     margin: 0 auto;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -569,11 +670,15 @@ color: #ffffff;
     max-width: 1000px;
     margin: 0 auto;
     padding: 40px 0 0 40px;
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .3);
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: relative;
     z-index: 9999;
     background: #ffff;
+    border-radius: 20px;
 }
 
 .home-contact .form-wrapper label {
@@ -595,6 +700,8 @@ color: #ffffff;
 .home-contact .form-wrapper .form-left {
     border-right: 1px solid #3DA935;
     padding: 0 60px 0 30px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 40%;
     flex: 0 0 40%;
     max-width: 40%;
 }
@@ -620,6 +727,8 @@ color: #ffffff;
 }
 
 .home-contact .form-wrapper .form-right {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 60%;
     flex: 0 0 60%;
     max-width: 60%;
 }
@@ -675,7 +784,11 @@ footer ul {
 }
 
 footer .footer-top-left {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -695,7 +808,11 @@ footer .footer-top-left .tel img {
 }
 
 footer .footer-top-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
 }
 
@@ -705,8 +822,14 @@ footer .footer-top-right .footer-menu-box {
 
 footer .social-media ul {
     margin-top: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -715,5 +838,262 @@ footer .social-media ul li {
 }
 
 footer .social-media ul li:hover img {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
     transform: scale(1.1);
+}
+
+
+/* other general css */
+
+.bg-dark-green {
+    background-color: #003a09 !important;
+}
+
+.container-inner {
+    max-width: 1160px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.banner-2 {
+    height: 100vh;
+    position: relative;
+    max-height: 100vh !important;
+    background-size: 100% 100%;
+    z-index: 9;
+}
+
+
+/* .banner-content {
+    position: absolute;
+    max-width: 1100px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+} */
+
+.banner-content h1 {
+    font-size: 45px;
+}
+
+.banner-next {
+    position: relative;
+}
+
+.banner-next::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: url(../images/contact-us-green-texture-parallax-Home-Desktop-Website-GC.png) no-repeat;
+}
+
+.banner-next:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: url(../images/contact-us-green-texture-parallax-right-Home-Desktop-Website-GC.png) no-repeat;
+    background-size: 25% 100%;
+    height: 300px;
+    background-position-x: right;
+}
+
+.how-does-it-works-2 {
+    padding: 70px;
+    background: #ffffff;
+    position: relative;
+}
+
+.how-does-it-works-2 h2.title.text-left span {
+    padding-bottom: 0;
+}
+
+.how-does-it-works-2 .top {
+    top: 0;
+    box-shadow: none;
+}
+
+.home-contact-2 {
+    margin-top: -80px;
+}
+
+
+/* =================Solutions page======================== */
+
+.banner-solution {
+    background-image: url(../images/solutions/solution-banner.png) !important;
+}
+
+.banner-solution .banner-content p {
+    max-width: 320px
+}
+
+.problem {
+    padding: 70px 0;
+}
+.problem .problem-inner{
+    position: relative;
+    z-index: 2;
+}
+
+.problem .problem-box {
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-bottom: 40px;
+    background: #f6f6f6;
+    min-height: 300px;
+    padding: 30px 10px;
+    text-align: center;
+}
+
+.problem .problem-box h5 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    min-height: 80px;
+    padding: 10px;
+    background: #3da935;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-size: 18px;
+}
+
+.problem .problem-box.contain-title {
+    background-color: transparent;
+}
+
+.problem .problem-box.contain-title p {
+    max-width: 100%!important;
+    text-align: left;
+}
+
+.problem .problem-box .overlay {
+    position: absolute;
+    top: 0%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #3da935;
+    padding: 20px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+
+.problem .problem-box:hover .overlay{
+    visibility: visible;
+    opacity: 1;
+}
+
+.solutions-main {
+    padding: 70px 0 20px;
+    background-color: #f6f6f6;
+}
+
+.solutions-inner {
+    padding: 50px 0;
+}
+
+.solutions-inner .solution-box {
+    background-color: #ffffff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+    position: relative;
+}
+
+.solution-box .solution-box-text {
+    padding: 10px 20px 30px 20px;
+}
+
+.solution-box .solution-box-text h6 {
+    font-weight: 900;
+}
+
+.solution-box .solution-box-text p {
+    margin-bottom: 0;
+}
+
+.solution-box .bottom-icon {
+    position: absolute;
+    bottom: -24px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50px;
+    height: 50px;
+}
+
+.product-details {
+    padding: 70px 0;
+    background: #f6f6f6;
+    position: relative;
+    z-index: 1;
+}
+
+.product-details .title {
+    max-width: 800px;
+    margin: 0 auto;
+    font-size: 18px;
+}
+
+.product-details .title span {
+    padding-bottom: 20px;
+}
+
+.product-details .title span:after {
+    left: 50%;
+    width: 50px;
+    height: 4px;
+    top: auto;
+    bottom: 0;
+}
+
+.product-details-box {
+    padding: 20px 40px;
+    background: #ffffff;
+    margin-bottom: 30px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 130px;
+}
+
+.product-details-box .logo-holder {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+
+.product-details-box .logo-holder img {
+    max-width: 100%;
+}
+
+.product-details-box .content-holder {
+    flex: 0 0 50%;
+    max-width: 50%;
+    font-size: 18px;
+}
+
+.product-details-box .icon-holder {
+    flex: 0 0 15%;
+    max-width: 15%;
+    text-align: right;
+}
+
+.product-details-box .icon-holder img {
+    height: 50px;
+    width: 50px;
 }
