--- a/css/responsive.css
+++ b/css/responsive.css
@@ -472,8 +472,7 @@
         display: none;
     }
     .banner-next:after {
-        background-size: 40% 100%;
-        height: 250px;
+      content: none;
     }
     /* solutions page ================================ */
     .banner-solution {
@@ -537,8 +536,12 @@
         background: #ffffff;
         padding: 0;
     }
+    .how-does-it-works-2:after{
+        content:none;    
+    }
     .how-does-it-works-2 .work-process{
         margin-top: 0;
+        border-radius: 0;
     }
     .product-details{
         background: url(../images/solutions/bg-shape-2.png) no-repeat;
