--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ header .menu-toggle {
     width: 100%;
     height: 300px;
     background: url(../images/Texture-right-Home-Desktop-Website-GC.png) no-repeat;
-    background-size: 275px auto;
+       background-size: 375px 500px;
     background-position: right top;
     background-attachment: fixed;
 }
