--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,8 @@ header .menu-toggle {
     width: 100%;
     height: 300px;
     background: url(../images/Texture-right-Home-Desktop-Website-GC.png) no-repeat;
-       background-size: 375px 500px;
+    /* background-size: 275px auto; */
+    background-size: 375px 500px;
     background-position: right top;
     background-attachment: fixed;
 }
@@ -411,9 +412,9 @@ header .menu-toggle {
     bottom: -100px;
     left: 0;
     width: 100%;
-    height: 200px;
+    height: 170px;
     background: url(../images/grey-bg-end-Home-Desktop-Website-GC.png) no-repeat;
-    background-size: 100% auto;
+    background-size: 100% 100%;
 }
 
 .how-we-do .home-products {
@@ -497,7 +498,7 @@ header .menu-toggle {
     background-position: bottom;
     /* background-size: 100% auto;
     background-position: top; */
-        background-attachment: fixed;
+    background-attachment: fixed;
 }
 
 .how-does-it-works .how-does-it-works-content {
